// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Color Generator Snapshots > getSemanticDependentTokens > should match snapshot for primary (L:050 / D:900) 1`] = `
{
  "componentSpecific": {
    "dark": {
      "metadata": {
        "theme": "dark",
        "type": "component-specific",
      },
      "tokens": {
        "color-button-foreground-primary": "color-black",
      },
    },
    "light": {
      "metadata": {
        "theme": "light",
        "type": "component-specific",
      },
      "tokens": {
        "color-button-foreground-primary": "color-black",
      },
    },
  },
  "semantic": {
    "dark": {
      "metadata": {
        "theme": "dark",
        "type": "semantic",
      },
      "tokens": {
        "color-background-primary-100": "color-lightGreen-050",
        "color-background-primary-200": "color-lightGreen-900",
        "color-border-primary": "color-lightGreen-900",
        "color-foreground-primary-100": "color-lightGreen-900",
        "color-foreground-primary-200": "color-lightGreen-900",
      },
    },
    "light": {
      "metadata": {
        "theme": "light",
        "type": "semantic",
      },
      "tokens": {
        "color-background-primary-100": "color-lightGreen-050",
        "color-background-primary-200": "color-lightGreen-050",
        "color-border-primary": "color-lightGreen-050",
        "color-foreground-primary-100": "color-lightGreen-100",
        "color-foreground-primary-200": "color-lightGreen-200",
      },
    },
  },
}
`;

exports[`Color Generator Snapshots > getSemanticDependentTokens > should match snapshot for primary (L:100 / D:800) 1`] = `
{
  "componentSpecific": {
    "dark": {
      "metadata": {
        "theme": "dark",
        "type": "component-specific",
      },
      "tokens": {
        "color-button-foreground-primary": "color-black",
      },
    },
    "light": {
      "metadata": {
        "theme": "light",
        "type": "component-specific",
      },
      "tokens": {
        "color-button-foreground-primary": "color-black",
      },
    },
  },
  "semantic": {
    "dark": {
      "metadata": {
        "theme": "dark",
        "type": "semantic",
      },
      "tokens": {
        "color-background-primary-100": "color-mint-050",
        "color-background-primary-200": "color-mint-800",
        "color-border-primary": "color-mint-800",
        "color-foreground-primary-100": "color-mint-900",
        "color-foreground-primary-200": "color-mint-900",
      },
    },
    "light": {
      "metadata": {
        "theme": "light",
        "type": "semantic",
      },
      "tokens": {
        "color-background-primary-100": "color-mint-100",
        "color-background-primary-200": "color-mint-100",
        "color-border-primary": "color-mint-100",
        "color-foreground-primary-100": "color-mint-200",
        "color-foreground-primary-200": "color-mint-300",
      },
    },
  },
}
`;

exports[`Color Generator Snapshots > getSemanticDependentTokens > should match snapshot for primary (L:800 / D:100) 1`] = `
{
  "componentSpecific": {
    "dark": {
      "metadata": {
        "theme": "dark",
        "type": "component-specific",
      },
      "tokens": {
        "color-button-foreground-primary": "color-white",
      },
    },
    "light": {
      "metadata": {
        "theme": "light",
        "type": "component-specific",
      },
      "tokens": {
        "color-button-foreground-primary": "color-white",
      },
    },
  },
  "semantic": {
    "dark": {
      "metadata": {
        "theme": "dark",
        "type": "semantic",
      },
      "tokens": {
        "color-background-primary-100": "color-darkGreen-050",
        "color-background-primary-200": "color-darkGreen-100",
        "color-border-primary": "color-darkGreen-100",
        "color-foreground-primary-100": "color-darkGreen-200",
        "color-foreground-primary-200": "color-darkGreen-300",
      },
    },
    "light": {
      "metadata": {
        "theme": "light",
        "type": "semantic",
      },
      "tokens": {
        "color-background-primary-100": "color-darkGreen-100",
        "color-background-primary-200": "color-darkGreen-800",
        "color-border-primary": "color-darkGreen-800",
        "color-foreground-primary-100": "color-darkGreen-900",
        "color-foreground-primary-200": "color-darkGreen-900",
      },
    },
  },
}
`;

exports[`Color Generator Snapshots > getSemanticDependentTokens > should match snapshot for primary (L:900 / D:050) 1`] = `
{
  "componentSpecific": {
    "dark": {
      "metadata": {
        "theme": "dark",
        "type": "component-specific",
      },
      "tokens": {
        "color-button-foreground-primary": "color-white",
      },
    },
    "light": {
      "metadata": {
        "theme": "light",
        "type": "component-specific",
      },
      "tokens": {
        "color-button-foreground-primary": "color-white",
      },
    },
  },
  "semantic": {
    "dark": {
      "metadata": {
        "theme": "dark",
        "type": "semantic",
      },
      "tokens": {
        "color-background-primary-100": "color-darkestGreen-050",
        "color-background-primary-200": "color-darkestGreen-050",
        "color-border-primary": "color-darkestGreen-050",
        "color-foreground-primary-100": "color-darkestGreen-100",
        "color-foreground-primary-200": "color-darkestGreen-200",
      },
    },
    "light": {
      "metadata": {
        "theme": "light",
        "type": "semantic",
      },
      "tokens": {
        "color-background-primary-100": "color-darkestGreen-100",
        "color-background-primary-200": "color-darkestGreen-900",
        "color-border-primary": "color-darkestGreen-900",
        "color-foreground-primary-100": "color-darkestGreen-900",
        "color-foreground-primary-200": "color-darkestGreen-900",
      },
    },
  },
}
`;

exports[`Color Generator Snapshots > should match brandColorPalette snapshot 1`] = `
{
  "dark": {
    "metadata": {
      "theme": "dark",
      "type": "primitive",
    },
    "tokens": {
      "color-background-canvas": {
        "codeSyntax": "vapor-color-background-canvas",
        "hex": "#1b1b1a",
        "name": "color-background-canvas",
        "oklch": "oklch(0.222 0.002 106.6)",
      },
      "color-mint-050": {
        "codeSyntax": "vapor-color-mint-050",
        "deltaE": 72.65,
        "hex": "#00271c",
        "name": "color-mint-050",
        "oklch": "oklch(0.242 0.048 169.5)",
      },
      "color-mint-100": {
        "codeSyntax": "vapor-color-mint-100",
        "deltaE": 64.51,
        "hex": "#00382b",
        "name": "color-mint-100",
        "oklch": "oklch(0.303 0.059 171.7)",
      },
      "color-mint-200": {
        "codeSyntax": "vapor-color-mint-200",
        "deltaE": 53.68,
        "hex": "#004b3d",
        "name": "color-mint-200",
        "oklch": "oklch(0.368 0.070 174.8)",
      },
      "color-mint-300": {
        "codeSyntax": "vapor-color-mint-300",
        "deltaE": 40.25,
        "hex": "#006757",
        "name": "color-mint-300",
        "oklch": "oklch(0.459 0.085 177.1)",
      },
      "color-mint-400": {
        "codeSyntax": "vapor-color-mint-400",
        "deltaE": 35.25,
        "hex": "#037363",
        "name": "color-mint-400",
        "oklch": "oklch(0.498 0.091 178.5)",
      },
      "color-mint-500": {
        "codeSyntax": "vapor-color-mint-500",
        "deltaE": 23.95,
        "hex": "#189280",
        "name": "color-mint-500",
        "oklch": "oklch(0.594 0.103 179.5)",
      },
      "color-mint-600": {
        "codeSyntax": "vapor-color-mint-600",
        "deltaE": 14.44,
        "hex": "#28b19d",
        "name": "color-mint-600",
        "oklch": "oklch(0.686 0.116 180.2)",
      },
      "color-mint-700": {
        "codeSyntax": "vapor-color-mint-700",
        "deltaE": 7.53,
        "hex": "#35cbb4",
        "name": "color-mint-700",
        "oklch": "oklch(0.760 0.126 179.9)",
      },
      "color-mint-800": {
        "codeSyntax": "vapor-color-mint-800",
        "deltaE": 0.35,
        "hex": "#44ead3",
        "name": "color-mint-800",
        "oklch": "oklch(0.848 0.137 181.5)",
      },
      "color-mint-900": {
        "codeSyntax": "vapor-color-mint-900",
        "deltaE": 13.97,
        "hex": "#c9f9ef",
        "name": "color-mint-900",
        "oklch": "oklch(0.946 0.051 181.1)",
      },
      "color-myGray-050": {
        "codeSyntax": "vapor-color-myGray-050",
        "deltaE": 0,
        "hex": "#222121",
        "name": "color-myGray-050",
        "oklch": "oklch(0.249 0.002 17.3)",
      },
      "color-myGray-100": {
        "codeSyntax": "vapor-color-myGray-100",
        "deltaE": 0,
        "hex": "#312f2f",
        "name": "color-myGray-100",
        "oklch": "oklch(0.307 0.003 17.3)",
      },
      "color-myGray-200": {
        "codeSyntax": "vapor-color-myGray-200",
        "deltaE": 0,
        "hex": "#434140",
        "name": "color-myGray-200",
        "oklch": "oklch(0.377 0.003 48.6)",
      },
      "color-myGray-300": {
        "codeSyntax": "vapor-color-myGray-300",
        "deltaE": 0,
        "hex": "#5c5a58",
        "name": "color-myGray-300",
        "oklch": "oklch(0.469 0.004 67.7)",
      },
      "color-myGray-400": {
        "codeSyntax": "vapor-color-myGray-400",
        "deltaE": 0,
        "hex": "#686564",
        "name": "color-myGray-400",
        "oklch": "oklch(0.509 0.004 39.5)",
      },
      "color-myGray-500": {
        "codeSyntax": "vapor-color-myGray-500",
        "deltaE": 0,
        "hex": "#84827f",
        "name": "color-myGray-500",
        "oklch": "oklch(0.607 0.005 78.3)",
      },
      "color-myGray-600": {
        "codeSyntax": "vapor-color-myGray-600",
        "deltaE": 0,
        "hex": "#a29e9c",
        "name": "color-myGray-600",
        "oklch": "oklch(0.702 0.006 48.7)",
      },
      "color-myGray-700": {
        "codeSyntax": "vapor-color-myGray-700",
        "deltaE": 0,
        "hex": "#b9b5b2",
        "name": "color-myGray-700",
        "oklch": "oklch(0.775 0.006 59.6)",
      },
      "color-myGray-800": {
        "codeSyntax": "vapor-color-myGray-800",
        "deltaE": 0,
        "hex": "#d7d2cf",
        "name": "color-myGray-800",
        "oklch": "oklch(0.867 0.007 53.4)",
      },
      "color-myGray-900": {
        "codeSyntax": "vapor-color-myGray-900",
        "deltaE": 0,
        "hex": "#f2eeeb",
        "name": "color-myGray-900",
        "oklch": "oklch(0.951 0.006 59.6)",
      },
    },
  },
  "light": {
    "metadata": {
      "theme": "light",
      "type": "primitive",
    },
    "tokens": {
      "color-background-canvas": {
        "codeSyntax": "vapor-color-background-canvas",
        "hex": "#efeae6",
        "name": "color-background-canvas",
        "oklch": "oklch(0.940 0.008 61.4)",
      },
      "color-mint-050": {
        "codeSyntax": "vapor-color-mint-050",
        "deltaE": 7.45,
        "hex": "#9cf3e3",
        "name": "color-mint-050",
        "oklch": "oklch(0.904 0.087 181.3)",
      },
      "color-mint-100": {
        "codeSyntax": "vapor-color-mint-100",
        "deltaE": 0,
        "hex": "#44ebd3",
        "name": "color-mint-100",
        "oklch": "oklch(0.850 0.138 181.0)",
      },
      "color-mint-200": {
        "codeSyntax": "vapor-color-mint-200",
        "deltaE": 7.53,
        "hex": "#35cbb4",
        "name": "color-mint-200",
        "oklch": "oklch(0.760 0.126 179.9)",
      },
      "color-mint-300": {
        "codeSyntax": "vapor-color-mint-300",
        "deltaE": 17.38,
        "hex": "#23a792",
        "name": "color-mint-300",
        "oklch": "oklch(0.656 0.112 178.9)",
      },
      "color-mint-400": {
        "codeSyntax": "vapor-color-mint-400",
        "deltaE": 22.32,
        "hex": "#1b9784",
        "name": "color-mint-400",
        "oklch": "oklch(0.608 0.105 179.1)",
      },
      "color-mint-500": {
        "codeSyntax": "vapor-color-mint-500",
        "deltaE": 33.27,
        "hex": "#077868",
        "name": "color-mint-500",
        "oklch": "oklch(0.514 0.092 179.0)",
      },
      "color-mint-600": {
        "codeSyntax": "vapor-color-mint-600",
        "deltaE": 44.28,
        "hex": "#005e4e",
        "name": "color-mint-600",
        "oklch": "oklch(0.430 0.081 175.8)",
      },
      "color-mint-700": {
        "codeSyntax": "vapor-color-mint-700",
        "deltaE": 54.22,
        "hex": "#004a3c",
        "name": "color-mint-700",
        "oklch": "oklch(0.365 0.069 174.6)",
      },
      "color-mint-800": {
        "codeSyntax": "vapor-color-mint-800",
        "deltaE": 66.76,
        "hex": "#003428",
        "name": "color-mint-800",
        "oklch": "oklch(0.290 0.056 172.1)",
      },
      "color-mint-900": {
        "codeSyntax": "vapor-color-mint-900",
        "deltaE": 76.02,
        "hex": "#001b11",
        "name": "color-mint-900",
        "oklch": "oklch(0.197 0.041 166.0)",
      },
      "color-myGray-050": {
        "codeSyntax": "vapor-color-myGray-050",
        "deltaE": 0,
        "hex": "#e7e2df",
        "name": "color-myGray-050",
        "oklch": "oklch(0.916 0.007 53.4)",
      },
      "color-myGray-100": {
        "codeSyntax": "vapor-color-myGray-100",
        "deltaE": 0,
        "hex": "#d3cecb",
        "name": "color-myGray-100",
        "oklch": "oklch(0.855 0.007 53.4)",
      },
      "color-myGray-200": {
        "codeSyntax": "vapor-color-myGray-200",
        "deltaE": 0,
        "hex": "#b9b5b2",
        "name": "color-myGray-200",
        "oklch": "oklch(0.775 0.006 59.6)",
      },
      "color-myGray-300": {
        "codeSyntax": "vapor-color-myGray-300",
        "deltaE": 0,
        "hex": "#989492",
        "name": "color-myGray-300",
        "oklch": "oklch(0.669 0.006 48.6)",
      },
      "color-myGray-400": {
        "codeSyntax": "vapor-color-myGray-400",
        "deltaE": 0,
        "hex": "#898784",
        "name": "color-myGray-400",
        "oklch": "oklch(0.624 0.005 78.3)",
      },
      "color-myGray-500": {
        "codeSyntax": "vapor-color-myGray-500",
        "deltaE": 0,
        "hex": "#6c6a68",
        "name": "color-myGray-500",
        "oklch": "oklch(0.525 0.004 67.7)",
      },
      "color-myGray-600": {
        "codeSyntax": "vapor-color-myGray-600",
        "deltaE": 0,
        "hex": "#545250",
        "name": "color-myGray-600",
        "oklch": "oklch(0.440 0.004 67.7)",
      },
      "color-myGray-700": {
        "codeSyntax": "vapor-color-myGray-700",
        "deltaE": 0,
        "hex": "#434140",
        "name": "color-myGray-700",
        "oklch": "oklch(0.377 0.003 48.6)",
      },
      "color-myGray-800": {
        "codeSyntax": "vapor-color-myGray-800",
        "deltaE": 0,
        "hex": "#2e2d2d",
        "name": "color-myGray-800",
        "oklch": "oklch(0.298 0.001 17.2)",
      },
      "color-myGray-900": {
        "codeSyntax": "vapor-color-myGray-900",
        "deltaE": 0,
        "hex": "#171717",
        "name": "color-myGray-900",
        "oklch": "oklch(0.205 0.000 0.0)",
      },
    },
  },
}
`;

exports[`Color Generator Snapshots > should match systemColorPalette snapshot 1`] = `
{
  "base": {
    "metadata": {
      "theme": "base",
      "type": "primitive",
    },
    "tokens": {
      "color-black": {
        "codeSyntax": "vapor-color-black",
        "hex": "#000000",
        "name": "color-black",
        "oklch": "oklch(0.000 0.000 0.0)",
      },
      "color-white": {
        "codeSyntax": "vapor-color-white",
        "hex": "#FFFFFF",
        "name": "color-white",
        "oklch": "oklch(1.000 0.000 0.0)",
      },
    },
  },
  "dark": {
    "metadata": {
      "theme": "dark",
      "type": "primitive",
    },
    "tokens": {
      "color-background-canvas": {
        "codeSyntax": "vapor-color-background-canvas",
        "hex": "#232323",
        "name": "color-background-canvas",
        "oklch": "oklch(0.256 0.000 0.0)",
      },
      "color-blue-050": {
        "codeSyntax": "vapor-color-blue-050",
        "deltaE": 39.49,
        "hex": "#001e74",
        "name": "color-blue-050",
        "oklch": "oklch(0.291 0.150 263.2)",
      },
      "color-blue-100": {
        "codeSyntax": "vapor-color-blue-100",
        "deltaE": 34.67,
        "hex": "#002f85",
        "name": "color-blue-100",
        "oklch": "oklch(0.343 0.152 261.4)",
      },
      "color-blue-200": {
        "codeSyntax": "vapor-color-blue-200",
        "deltaE": 28.81,
        "hex": "#09429c",
        "name": "color-blue-200",
        "oklch": "oklch(0.406 0.157 260.3)",
      },
      "color-blue-300": {
        "codeSyntax": "vapor-color-blue-300",
        "deltaE": 19.51,
        "hex": "#1f5cbe",
        "name": "color-blue-300",
        "oklch": "oklch(0.494 0.166 259.8)",
      },
      "color-blue-400": {
        "codeSyntax": "vapor-color-blue-400",
        "deltaE": 14.01,
        "hex": "#2969cf",
        "name": "color-blue-400",
        "oklch": "oklch(0.538 0.171 259.6)",
      },
      "color-blue-500": {
        "codeSyntax": "vapor-color-blue-500",
        "deltaE": 2.36,
        "hex": "#3f87f6",
        "name": "color-blue-500",
        "oklch": "oklch(0.635 0.181 259.0)",
      },
      "color-blue-600": {
        "codeSyntax": "vapor-color-blue-600",
        "deltaE": 7.63,
        "hex": "#6da8ff",
        "name": "color-blue-600",
        "oklch": "oklch(0.729 0.141 258.0)",
      },
      "color-blue-700": {
        "codeSyntax": "vapor-color-blue-700",
        "deltaE": 14.62,
        "hex": "#96c1ff",
        "name": "color-blue-700",
        "oklch": "oklch(0.803 0.100 257.5)",
      },
      "color-blue-800": {
        "codeSyntax": "vapor-color-blue-800",
        "deltaE": 23.45,
        "hex": "#c7deff",
        "name": "color-blue-800",
        "oklch": "oklch(0.894 0.052 257.4)",
      },
      "color-blue-900": {
        "codeSyntax": "vapor-color-blue-900",
        "deltaE": 34.4,
        "hex": "#f6faff",
        "name": "color-blue-900",
        "oklch": "oklch(0.984 0.008 253.9)",
      },
      "color-cyan-050": {
        "codeSyntax": "vapor-color-cyan-050",
        "deltaE": 50.25,
        "hex": "#002d3f",
        "name": "color-cyan-050",
        "oklch": "oklch(0.279 0.056 231.0)",
      },
      "color-cyan-100": {
        "codeSyntax": "vapor-color-cyan-100",
        "deltaE": 46.11,
        "hex": "#003c4e",
        "name": "color-cyan-100",
        "oklch": "oklch(0.331 0.063 225.2)",
      },
      "color-cyan-200": {
        "codeSyntax": "vapor-color-cyan-200",
        "deltaE": 39.76,
        "hex": "#004f61",
        "name": "color-cyan-200",
        "oklch": "oklch(0.395 0.072 219.9)",
      },
      "color-cyan-300": {
        "codeSyntax": "vapor-color-cyan-300",
        "deltaE": 27.91,
        "hex": "#05697e",
        "name": "color-cyan-300",
        "oklch": "oklch(0.481 0.085 218.2)",
      },
      "color-cyan-400": {
        "codeSyntax": "vapor-color-cyan-400",
        "deltaE": 22.4,
        "hex": "#09768c",
        "name": "color-cyan-400",
        "oklch": "oklch(0.523 0.091 217.2)",
      },
      "color-cyan-500": {
        "codeSyntax": "vapor-color-cyan-500",
        "deltaE": 10.75,
        "hex": "#1396ae",
        "name": "color-cyan-500",
        "oklch": "oklch(0.621 0.106 214.8)",
      },
      "color-cyan-600": {
        "codeSyntax": "vapor-color-cyan-600",
        "deltaE": 1.1,
        "hex": "#1db6ce",
        "name": "color-cyan-600",
        "oklch": "oklch(0.714 0.120 211.9)",
      },
      "color-cyan-700": {
        "codeSyntax": "vapor-color-cyan-700",
        "deltaE": 6.65,
        "hex": "#6fccdd",
        "name": "color-cyan-700",
        "oklch": "oklch(0.794 0.092 210.8)",
      },
      "color-cyan-800": {
        "codeSyntax": "vapor-color-cyan-800",
        "deltaE": 16.5,
        "hex": "#b8e4ee",
        "name": "color-cyan-800",
        "oklch": "oklch(0.891 0.048 213.1)",
      },
      "color-cyan-900": {
        "codeSyntax": "vapor-color-cyan-900",
        "deltaE": 27.61,
        "hex": "#f4fbfc",
        "name": "color-cyan-900",
        "oklch": "oklch(0.983 0.008 207.1)",
      },
      "color-grape-050": {
        "codeSyntax": "vapor-color-grape-050",
        "deltaE": 36.4,
        "hex": "#48005c",
        "name": "color-grape-050",
        "oklch": "oklch(0.298 0.146 316.4)",
      },
      "color-grape-100": {
        "codeSyntax": "vapor-color-grape-100",
        "deltaE": 32.03,
        "hex": "#5f0074",
        "name": "color-grape-100",
        "oklch": "oklch(0.357 0.173 318.3)",
      },
      "color-grape-200": {
        "codeSyntax": "vapor-color-grape-200",
        "deltaE": 26.49,
        "hex": "#77168d",
        "name": "color-grape-200",
        "oklch": "oklch(0.425 0.187 319.0)",
      },
      "color-grape-300": {
        "codeSyntax": "vapor-color-grape-300",
        "deltaE": 17.86,
        "hex": "#9532ad",
        "name": "color-grape-300",
        "oklch": "oklch(0.514 0.198 319.1)",
      },
      "color-grape-400": {
        "codeSyntax": "vapor-color-grape-400",
        "deltaE": 12.67,
        "hex": "#a43ebe",
        "name": "color-grape-400",
        "oklch": "oklch(0.558 0.205 318.8)",
      },
      "color-grape-500": {
        "codeSyntax": "vapor-color-grape-500",
        "deltaE": 1.19,
        "hex": "#c85ae3",
        "name": "color-grape-500",
        "oklch": "oklch(0.658 0.217 319.3)",
      },
      "color-grape-600": {
        "codeSyntax": "vapor-color-grape-600",
        "deltaE": 9.46,
        "hex": "#da87ef",
        "name": "color-grape-600",
        "oklch": "oklch(0.747 0.168 319.3)",
      },
      "color-grape-700": {
        "codeSyntax": "vapor-color-grape-700",
        "deltaE": 17.5,
        "hex": "#e5a9f5",
        "name": "color-grape-700",
        "oklch": "oklch(0.816 0.122 319.0)",
      },
      "color-grape-800": {
        "codeSyntax": "vapor-color-grape-800",
        "deltaE": 27.77,
        "hex": "#f2d2fb",
        "name": "color-grape-800",
        "oklch": "oklch(0.903 0.065 318.8)",
      },
      "color-grape-900": {
        "codeSyntax": "vapor-color-grape-900",
        "deltaE": 38.72,
        "hex": "#fdf8fe",
        "name": "color-grape-900",
        "oklch": "oklch(0.985 0.009 320.5)",
      },
      "color-gray-050": {
        "codeSyntax": "vapor-color-gray-050",
        "deltaE": 0,
        "hex": "#282828",
        "name": "color-gray-050",
        "oklch": "oklch(0.277 0.000 0.0)",
      },
      "color-gray-100": {
        "codeSyntax": "vapor-color-gray-100",
        "deltaE": 0,
        "hex": "#363636",
        "name": "color-gray-100",
        "oklch": "oklch(0.333 0.000 0.0)",
      },
      "color-gray-200": {
        "codeSyntax": "vapor-color-gray-200",
        "deltaE": 0,
        "hex": "#474747",
        "name": "color-gray-200",
        "oklch": "oklch(0.398 0.000 0.0)",
      },
      "color-gray-300": {
        "codeSyntax": "vapor-color-gray-300",
        "deltaE": 0,
        "hex": "#606060",
        "name": "color-gray-300",
        "oklch": "oklch(0.489 0.000 0.0)",
      },
      "color-gray-400": {
        "codeSyntax": "vapor-color-gray-400",
        "deltaE": 0,
        "hex": "#6c6c6c",
        "name": "color-gray-400",
        "oklch": "oklch(0.531 0.000 0.0)",
      },
      "color-gray-500": {
        "codeSyntax": "vapor-color-gray-500",
        "deltaE": 0,
        "hex": "#898989",
        "name": "color-gray-500",
        "oklch": "oklch(0.630 0.000 0.0)",
      },
      "color-gray-600": {
        "codeSyntax": "vapor-color-gray-600",
        "deltaE": 0,
        "hex": "#a7a7a7",
        "name": "color-gray-600",
        "oklch": "oklch(0.728 0.000 0.0)",
      },
      "color-gray-700": {
        "codeSyntax": "vapor-color-gray-700",
        "deltaE": 0,
        "hex": "#bebebe",
        "name": "color-gray-700",
        "oklch": "oklch(0.802 0.000 0.0)",
      },
      "color-gray-800": {
        "codeSyntax": "vapor-color-gray-800",
        "deltaE": 0,
        "hex": "#dcdcdc",
        "name": "color-gray-800",
        "oklch": "oklch(0.894 0.000 0.0)",
      },
      "color-gray-900": {
        "codeSyntax": "vapor-color-gray-900",
        "deltaE": 0,
        "hex": "#fafafa",
        "name": "color-gray-900",
        "oklch": "oklch(0.985 0.000 0.0)",
      },
      "color-green-050": {
        "codeSyntax": "vapor-color-green-050",
        "deltaE": 38.2,
        "hex": "#003019",
        "name": "color-green-050",
        "oklch": "oklch(0.272 0.065 156.5)",
      },
      "color-green-100": {
        "codeSyntax": "vapor-color-green-100",
        "deltaE": 34,
        "hex": "#003f26",
        "name": "color-green-100",
        "oklch": "oklch(0.324 0.074 159.5)",
      },
      "color-green-200": {
        "codeSyntax": "vapor-color-green-200",
        "deltaE": 28.5,
        "hex": "#015237",
        "name": "color-green-200",
        "oklch": "oklch(0.388 0.084 162.7)",
      },
      "color-green-300": {
        "codeSyntax": "vapor-color-green-300",
        "deltaE": 19.23,
        "hex": "#046e4e",
        "name": "color-green-300",
        "oklch": "oklch(0.477 0.100 164.5)",
      },
      "color-green-400": {
        "codeSyntax": "vapor-color-green-400",
        "deltaE": 14.1,
        "hex": "#057b5a",
        "name": "color-green-400",
        "oklch": "oklch(0.517 0.106 166.1)",
      },
      "color-green-500": {
        "codeSyntax": "vapor-color-green-500",
        "deltaE": 2.24,
        "hex": "#059c77",
        "name": "color-green-500",
        "oklch": "oklch(0.616 0.123 168.3)",
      },
      "color-green-600": {
        "codeSyntax": "vapor-color-green-600",
        "deltaE": 8.1,
        "hex": "#5cb798",
        "name": "color-green-600",
        "oklch": "oklch(0.714 0.100 168.9)",
      },
      "color-green-700": {
        "codeSyntax": "vapor-color-green-700",
        "deltaE": 15.99,
        "hex": "#8ecbb4",
        "name": "color-green-700",
        "oklch": "oklch(0.794 0.071 169.0)",
      },
      "color-green-800": {
        "codeSyntax": "vapor-color-green-800",
        "deltaE": 25.34,
        "hex": "#c3e3d7",
        "name": "color-green-800",
        "oklch": "oklch(0.889 0.037 170.8)",
      },
      "color-green-900": {
        "codeSyntax": "vapor-color-green-900",
        "deltaE": 34.87,
        "hex": "#f5fbf8",
        "name": "color-green-900",
        "oklch": "oklch(0.983 0.007 164.9)",
      },
      "color-lime-050": {
        "codeSyntax": "vapor-color-lime-050",
        "deltaE": 61.54,
        "hex": "#003100",
        "name": "color-lime-050",
        "oklch": "oklch(0.271 0.092 142.5)",
      },
      "color-lime-100": {
        "codeSyntax": "vapor-color-lime-100",
        "deltaE": 56.09,
        "hex": "#0d4000",
        "name": "color-lime-100",
        "oklch": "oklch(0.325 0.105 140.1)",
      },
      "color-lime-200": {
        "codeSyntax": "vapor-color-lime-200",
        "deltaE": 46.57,
        "hex": "#205200",
        "name": "color-lime-200",
        "oklch": "oklch(0.389 0.118 137.3)",
      },
      "color-lime-300": {
        "codeSyntax": "vapor-color-lime-300",
        "deltaE": 33.4,
        "hex": "#386d04",
        "name": "color-lime-300",
        "oklch": "oklch(0.479 0.137 134.8)",
      },
      "color-lime-400": {
        "codeSyntax": "vapor-color-lime-400",
        "deltaE": 27.96,
        "hex": "#437a09",
        "name": "color-lime-400",
        "oklch": "oklch(0.521 0.146 134.0)",
      },
      "color-lime-500": {
        "codeSyntax": "vapor-color-lime-500",
        "deltaE": 16.74,
        "hex": "#5c9915",
        "name": "color-lime-500",
        "oklch": "oklch(0.618 0.166 132.7)",
      },
      "color-lime-600": {
        "codeSyntax": "vapor-color-lime-600",
        "deltaE": 6.93,
        "hex": "#78b920",
        "name": "color-lime-600",
        "oklch": "oklch(0.715 0.185 131.1)",
      },
      "color-lime-700": {
        "codeSyntax": "vapor-color-lime-700",
        "deltaE": 0.49,
        "hex": "#8ed127",
        "name": "color-lime-700",
        "oklch": "oklch(0.787 0.199 129.9)",
      },
      "color-lime-800": {
        "codeSyntax": "vapor-color-lime-800",
        "deltaE": 12.87,
        "hex": "#c2e89a",
        "name": "color-lime-800",
        "oklch": "oklch(0.885 0.110 129.5)",
      },
      "color-lime-900": {
        "codeSyntax": "vapor-color-lime-900",
        "deltaE": 28.46,
        "hex": "#f5fcef",
        "name": "color-lime-900",
        "oklch": "oklch(0.982 0.019 130.2)",
      },
      "color-orange-050": {
        "codeSyntax": "vapor-color-orange-050",
        "deltaE": 40.28,
        "hex": "#5a0000",
        "name": "color-orange-050",
        "oklch": "oklch(0.294 0.120 29.2)",
      },
      "color-orange-100": {
        "codeSyntax": "vapor-color-orange-100",
        "deltaE": 35.36,
        "hex": "#750000",
        "name": "color-orange-100",
        "oklch": "oklch(0.353 0.145 29.2)",
      },
      "color-orange-200": {
        "codeSyntax": "vapor-color-orange-200",
        "deltaE": 29.29,
        "hex": "#8c1b02",
        "name": "color-orange-200",
        "oklch": "oklch(0.417 0.151 33.1)",
      },
      "color-orange-300": {
        "codeSyntax": "vapor-color-orange-300",
        "deltaE": 19.76,
        "hex": "#af3606",
        "name": "color-orange-300",
        "oklch": "oklch(0.508 0.165 37.5)",
      },
      "color-orange-400": {
        "codeSyntax": "vapor-color-orange-400",
        "deltaE": 14.29,
        "hex": "#bf4308",
        "name": "color-orange-400",
        "oklch": "oklch(0.551 0.170 39.9)",
      },
      "color-orange-500": {
        "codeSyntax": "vapor-color-orange-500",
        "deltaE": 2.46,
        "hex": "#e5600c",
        "name": "color-orange-500",
        "oklch": "oklch(0.649 0.183 44.6)",
      },
      "color-orange-600": {
        "codeSyntax": "vapor-color-orange-600",
        "deltaE": 9.41,
        "hex": "#f58a56",
        "name": "color-orange-600",
        "oklch": "oklch(0.740 0.147 45.6)",
      },
      "color-orange-700": {
        "codeSyntax": "vapor-color-orange-700",
        "deltaE": 18.08,
        "hex": "#fbac88",
        "name": "color-orange-700",
        "oklch": "oklch(0.812 0.105 45.3)",
      },
      "color-orange-800": {
        "codeSyntax": "vapor-color-orange-800",
        "deltaE": 28.29,
        "hex": "#ffd4c0",
        "name": "color-orange-800",
        "oklch": "oklch(0.902 0.056 46.3)",
      },
      "color-orange-900": {
        "codeSyntax": "vapor-color-orange-900",
        "deltaE": 38.36,
        "hex": "#fff9f5",
        "name": "color-orange-900",
        "oklch": "oklch(0.986 0.008 56.3)",
      },
      "color-pink-050": {
        "codeSyntax": "vapor-color-pink-050",
        "deltaE": 39.86,
        "hex": "#580021",
        "name": "color-pink-050",
        "oklch": "oklch(0.295 0.118 8.1)",
      },
      "color-pink-100": {
        "codeSyntax": "vapor-color-pink-100",
        "deltaE": 35.59,
        "hex": "#700033",
        "name": "color-pink-100",
        "oklch": "oklch(0.351 0.141 3.5)",
      },
      "color-pink-200": {
        "codeSyntax": "vapor-color-pink-200",
        "deltaE": 30.14,
        "hex": "#8b1247",
        "name": "color-pink-200",
        "oklch": "oklch(0.420 0.157 1.6)",
      },
      "color-pink-300": {
        "codeSyntax": "vapor-color-pink-300",
        "deltaE": 20.72,
        "hex": "#ad2f60",
        "name": "color-pink-300",
        "oklch": "oklch(0.512 0.166 1.5)",
      },
      "color-pink-400": {
        "codeSyntax": "vapor-color-pink-400",
        "deltaE": 15.29,
        "hex": "#bd3c6c",
        "name": "color-pink-400",
        "oklch": "oklch(0.555 0.169 1.6)",
      },
      "color-pink-500": {
        "codeSyntax": "vapor-color-pink-500",
        "deltaE": 3.93,
        "hex": "#e35889",
        "name": "color-pink-500",
        "oklch": "oklch(0.654 0.178 1.4)",
      },
      "color-pink-600": {
        "codeSyntax": "vapor-color-pink-600",
        "deltaE": 6.25,
        "hex": "#f881a6",
        "name": "color-pink-600",
        "oklch": "oklch(0.746 0.150 1.6)",
      },
      "color-pink-700": {
        "codeSyntax": "vapor-color-pink-700",
        "deltaE": 14.16,
        "hex": "#fea5be",
        "name": "color-pink-700",
        "oklch": "oklch(0.817 0.109 1.5)",
      },
      "color-pink-800": {
        "codeSyntax": "vapor-color-pink-800",
        "deltaE": 24.29,
        "hex": "#ffd0dd",
        "name": "color-pink-800",
        "oklch": "oklch(0.902 0.055 359.8)",
      },
      "color-pink-900": {
        "codeSyntax": "vapor-color-pink-900",
        "deltaE": 34.97,
        "hex": "#fff8fa",
        "name": "color-pink-900",
        "oklch": "oklch(0.985 0.008 357.8)",
      },
      "color-red-050": {
        "codeSyntax": "vapor-color-red-050",
        "deltaE": 36.85,
        "hex": "#590000",
        "name": "color-red-050",
        "oklch": "oklch(0.291 0.120 29.2)",
      },
      "color-red-100": {
        "codeSyntax": "vapor-color-red-100",
        "deltaE": 32.66,
        "hex": "#730006",
        "name": "color-red-100",
        "oklch": "oklch(0.349 0.143 27.3)",
      },
      "color-red-200": {
        "codeSyntax": "vapor-color-red-200",
        "deltaE": 26.71,
        "hex": "#900f1d",
        "name": "color-red-200",
        "oklch": "oklch(0.419 0.160 23.6)",
      },
      "color-red-300": {
        "codeSyntax": "vapor-color-red-300",
        "deltaE": 17.72,
        "hex": "#b52b34",
        "name": "color-red-300",
        "oklch": "oklch(0.512 0.174 22.7)",
      },
      "color-red-400": {
        "codeSyntax": "vapor-color-red-400",
        "deltaE": 12.73,
        "hex": "#c63640",
        "name": "color-red-400",
        "oklch": "oklch(0.554 0.180 21.8)",
      },
      "color-red-500": {
        "codeSyntax": "vapor-color-red-500",
        "deltaE": 1.22,
        "hex": "#f0505b",
        "name": "color-red-500",
        "oklch": "oklch(0.654 0.196 20.6)",
      },
      "color-red-600": {
        "codeSyntax": "vapor-color-red-600",
        "deltaE": 9.58,
        "hex": "#fd8283",
        "name": "color-red-600",
        "oklch": "oklch(0.745 0.150 20.8)",
      },
      "color-red-700": {
        "codeSyntax": "vapor-color-red-700",
        "deltaE": 17.91,
        "hex": "#ffa7a6",
        "name": "color-red-700",
        "oklch": "oklch(0.815 0.105 20.3)",
      },
      "color-red-800": {
        "codeSyntax": "vapor-color-red-800",
        "deltaE": 28.23,
        "hex": "#ffd2d0",
        "name": "color-red-800",
        "oklch": "oklch(0.902 0.051 21.1)",
      },
      "color-red-900": {
        "codeSyntax": "vapor-color-red-900",
        "deltaE": 37.93,
        "hex": "#fff8f8",
        "name": "color-red-900",
        "oklch": "oklch(0.985 0.007 17.3)",
      },
      "color-violet-050": {
        "codeSyntax": "vapor-color-violet-050",
        "deltaE": 29.61,
        "hex": "#33007c",
        "name": "color-violet-050",
        "oklch": "oklch(0.302 0.172 288.9)",
      },
      "color-violet-100": {
        "codeSyntax": "vapor-color-violet-100",
        "deltaE": 25.25,
        "hex": "#421690",
        "name": "color-violet-100",
        "oklch": "oklch(0.357 0.179 290.4)",
      },
      "color-violet-200": {
        "codeSyntax": "vapor-color-violet-200",
        "deltaE": 19.78,
        "hex": "#522ba8",
        "name": "color-violet-200",
        "oklch": "oklch(0.420 0.186 290.3)",
      },
      "color-violet-300": {
        "codeSyntax": "vapor-color-violet-300",
        "deltaE": 11.15,
        "hex": "#6a45cc",
        "name": "color-violet-300",
        "oklch": "oklch(0.509 0.198 290.2)",
      },
      "color-violet-400": {
        "codeSyntax": "vapor-color-violet-400",
        "deltaE": 6.38,
        "hex": "#7652dd",
        "name": "color-violet-400",
        "oklch": "oklch(0.553 0.202 290.1)",
      },
      "color-violet-500": {
        "codeSyntax": "vapor-color-violet-500",
        "deltaE": 5.23,
        "hex": "#9074f6",
        "name": "color-violet-500",
        "oklch": "oklch(0.647 0.187 290.1)",
      },
      "color-violet-600": {
        "codeSyntax": "vapor-color-violet-600",
        "deltaE": 15.72,
        "hex": "#aa99fb",
        "name": "color-violet-600",
        "oklch": "oklch(0.737 0.140 290.5)",
      },
      "color-violet-700": {
        "codeSyntax": "vapor-color-violet-700",
        "deltaE": 23.54,
        "hex": "#c0b6fe",
        "name": "color-violet-700",
        "oklch": "oklch(0.810 0.101 290.3)",
      },
      "color-violet-800": {
        "codeSyntax": "vapor-color-violet-800",
        "deltaE": 33.03,
        "hex": "#ddd9ff",
        "name": "color-violet-800",
        "oklch": "oklch(0.900 0.052 290.1)",
      },
      "color-violet-900": {
        "codeSyntax": "vapor-color-violet-900",
        "deltaE": 42.89,
        "hex": "#faf9ff",
        "name": "color-violet-900",
        "oklch": "oklch(0.985 0.008 293.9)",
      },
      "color-yellow-050": {
        "codeSyntax": "vapor-color-yellow-050",
        "deltaE": 68.87,
        "hex": "#481c00",
        "name": "color-yellow-050",
        "oklch": "oklch(0.288 0.077 48.8)",
      },
      "color-yellow-100": {
        "codeSyntax": "vapor-color-yellow-100",
        "deltaE": 61.17,
        "hex": "#572a00",
        "name": "color-yellow-100",
        "oklch": "oklch(0.339 0.083 56.1)",
      },
      "color-yellow-200": {
        "codeSyntax": "vapor-color-yellow-200",
        "deltaE": 50.08,
        "hex": "#6b3c00",
        "name": "color-yellow-200",
        "oklch": "oklch(0.405 0.092 63.3)",
      },
      "color-yellow-300": {
        "codeSyntax": "vapor-color-yellow-300",
        "deltaE": 37.05,
        "hex": "#875500",
        "name": "color-yellow-300",
        "oklch": "oklch(0.494 0.107 70.5)",
      },
      "color-yellow-400": {
        "codeSyntax": "vapor-color-yellow-400",
        "deltaE": 31.53,
        "hex": "#966101",
        "name": "color-yellow-400",
        "oklch": "oklch(0.537 0.115 72.2)",
      },
      "color-yellow-500": {
        "codeSyntax": "vapor-color-yellow-500",
        "deltaE": 20.04,
        "hex": "#b87e01",
        "name": "color-yellow-500",
        "oklch": "oklch(0.636 0.133 76.4)",
      },
      "color-yellow-600": {
        "codeSyntax": "vapor-color-yellow-600",
        "deltaE": 10.46,
        "hex": "#d99b02",
        "name": "color-yellow-600",
        "oklch": "oklch(0.730 0.151 79.8)",
      },
      "color-yellow-700": {
        "codeSyntax": "vapor-color-yellow-700",
        "deltaE": 3.37,
        "hex": "#f3b405",
        "name": "color-yellow-700",
        "oklch": "oklch(0.807 0.165 83.0)",
      },
      "color-yellow-800": {
        "codeSyntax": "vapor-color-yellow-800",
        "deltaE": 10.18,
        "hex": "#ffd782",
        "name": "color-yellow-800",
        "oklch": "oklch(0.895 0.113 85.0)",
      },
      "color-yellow-900": {
        "codeSyntax": "vapor-color-yellow-900",
        "deltaE": 27.75,
        "hex": "#fff9ee",
        "name": "color-yellow-900",
        "oklch": "oklch(0.984 0.016 82.8)",
      },
    },
  },
  "light": {
    "metadata": {
      "theme": "light",
      "type": "primitive",
    },
    "tokens": {
      "color-background-canvas": {
        "codeSyntax": "vapor-color-background-canvas",
        "hex": "#ffffff",
        "name": "color-background-canvas",
        "oklch": "oklch(1.000 0.000 0.0)",
      },
      "color-blue-050": {
        "codeSyntax": "vapor-color-blue-050",
        "deltaE": 33,
        "hex": "#f1f7ff",
        "name": "color-blue-050",
        "oklch": "oklch(0.974 0.012 255.5)",
      },
      "color-blue-100": {
        "codeSyntax": "vapor-color-blue-100",
        "deltaE": 24.87,
        "hex": "#cee3ff",
        "name": "color-blue-100",
        "oklch": "oklch(0.909 0.045 255.6)",
      },
      "color-blue-200": {
        "codeSyntax": "vapor-color-blue-200",
        "deltaE": 16.97,
        "hex": "#a4c9ff",
        "name": "color-blue-200",
        "oklch": "oklch(0.828 0.086 257.7)",
      },
      "color-blue-300": {
        "codeSyntax": "vapor-color-blue-300",
        "deltaE": 6.56,
        "hex": "#69a4ff",
        "name": "color-blue-300",
        "oklch": "oklch(0.718 0.147 258.8)",
      },
      "color-blue-400": {
        "codeSyntax": "vapor-color-blue-400",
        "deltaE": 1.85,
        "hex": "#4e94ff",
        "name": "color-blue-400",
        "oklch": "oklch(0.673 0.174 258.7)",
      },
      "color-blue-500": {
        "codeSyntax": "vapor-color-blue-500",
        "deltaE": 9.54,
        "hex": "#3174dc",
        "name": "color-blue-500",
        "oklch": "oklch(0.573 0.173 259.2)",
      },
      "color-blue-600": {
        "codeSyntax": "vapor-color-blue-600",
        "deltaE": 20.41,
        "hex": "#1d5aba",
        "name": "color-blue-600",
        "oklch": "oklch(0.486 0.164 259.6)",
      },
      "color-blue-700": {
        "codeSyntax": "vapor-color-blue-700",
        "deltaE": 27.16,
        "hex": "#0e47a3",
        "name": "color-blue-700",
        "oklch": "oklch(0.424 0.159 260.3)",
      },
      "color-blue-800": {
        "codeSyntax": "vapor-color-blue-800",
        "deltaE": 33.79,
        "hex": "#003288",
        "name": "color-blue-800",
        "oklch": "oklch(0.352 0.152 261.0)",
      },
      "color-blue-900": {
        "codeSyntax": "vapor-color-blue-900",
        "deltaE": 40.3,
        "hex": "#001b71",
        "name": "color-blue-900",
        "oklch": "oklch(0.282 0.149 263.4)",
      },
      "color-cyan-050": {
        "codeSyntax": "vapor-color-cyan-050",
        "deltaE": 26.29,
        "hex": "#eef9fb",
        "name": "color-cyan-050",
        "oklch": "oklch(0.974 0.012 209.8)",
      },
      "color-cyan-100": {
        "codeSyntax": "vapor-color-cyan-100",
        "deltaE": 18.15,
        "hex": "#c2e8f0",
        "name": "color-cyan-100",
        "oklch": "oklch(0.906 0.041 211.9)",
      },
      "color-cyan-200": {
        "codeSyntax": "vapor-color-cyan-200",
        "deltaE": 9.09,
        "hex": "#84d2e2",
        "name": "color-cyan-200",
        "oklch": "oklch(0.819 0.080 212.1)",
      },
      "color-cyan-300": {
        "codeSyntax": "vapor-color-cyan-300",
        "deltaE": 1.93,
        "hex": "#1cb3cb",
        "name": "color-cyan-300",
        "oklch": "oklch(0.706 0.119 212.1)",
      },
      "color-cyan-400": {
        "codeSyntax": "vapor-color-cyan-400",
        "deltaE": 6.62,
        "hex": "#17a3ba",
        "name": "color-cyan-400",
        "oklch": "oklch(0.659 0.111 212.8)",
      },
      "color-cyan-500": {
        "codeSyntax": "vapor-color-cyan-500",
        "deltaE": 17.74,
        "hex": "#0d8298",
        "name": "color-cyan-500",
        "oklch": "oklch(0.559 0.097 215.6)",
      },
      "color-cyan-600": {
        "codeSyntax": "vapor-color-cyan-600",
        "deltaE": 28.82,
        "hex": "#04677b",
        "name": "color-cyan-600",
        "oklch": "oklch(0.474 0.084 217.5)",
      },
      "color-cyan-700": {
        "codeSyntax": "vapor-color-cyan-700",
        "deltaE": 37.61,
        "hex": "#005468",
        "name": "color-cyan-700",
        "oklch": "oklch(0.413 0.076 221.1)",
      },
      "color-cyan-800": {
        "codeSyntax": "vapor-color-cyan-800",
        "deltaE": 45.24,
        "hex": "#003f51",
        "name": "color-cyan-800",
        "oklch": "oklch(0.342 0.064 224.2)",
      },
      "color-cyan-900": {
        "codeSyntax": "vapor-color-cyan-900",
        "deltaE": 51.07,
        "hex": "#002a3c",
        "name": "color-cyan-900",
        "oklch": "oklch(0.268 0.055 232.4)",
      },
      "color-grape-050": {
        "codeSyntax": "vapor-color-grape-050",
        "deltaE": 37.75,
        "hex": "#fcf5fe",
        "name": "color-grape-050",
        "oklch": "oklch(0.978 0.014 318.7)",
      },
      "color-grape-100": {
        "codeSyntax": "vapor-color-grape-100",
        "deltaE": 29.44,
        "hex": "#f4d8fb",
        "name": "color-grape-100",
        "oklch": "oklch(0.916 0.056 319.5)",
      },
      "color-grape-200": {
        "codeSyntax": "vapor-color-grape-200",
        "deltaE": 20.17,
        "hex": "#e9b4f7",
        "name": "color-grape-200",
        "oklch": "oklch(0.840 0.107 319.1)",
      },
      "color-grape-300": {
        "codeSyntax": "vapor-color-grape-300",
        "deltaE": 8.48,
        "hex": "#d883ef",
        "name": "color-grape-300",
        "oklch": "oklch(0.739 0.173 318.8)",
      },
      "color-grape-400": {
        "codeSyntax": "vapor-color-grape-400",
        "deltaE": 3.02,
        "hex": "#d06bea",
        "name": "color-grape-400",
        "oklch": "oklch(0.693 0.202 319.1)",
      },
      "color-grape-500": {
        "codeSyntax": "vapor-color-grape-500",
        "deltaE": 8.33,
        "hex": "#b148cb",
        "name": "color-grape-500",
        "oklch": "oklch(0.594 0.209 319.1)",
      },
      "color-grape-600": {
        "codeSyntax": "vapor-color-grape-600",
        "deltaE": 18.8,
        "hex": "#922fab",
        "name": "color-grape-600",
        "oklch": "oklch(0.506 0.198 318.7)",
      },
      "color-grape-700": {
        "codeSyntax": "vapor-color-grape-700",
        "deltaE": 24.89,
        "hex": "#7d1c94",
        "name": "color-grape-700",
        "oklch": "oklch(0.444 0.190 318.8)",
      },
      "color-grape-800": {
        "codeSyntax": "vapor-color-grape-800",
        "deltaE": 31.1,
        "hex": "#640079",
        "name": "color-grape-800",
        "oklch": "oklch(0.369 0.178 318.7)",
      },
      "color-grape-900": {
        "codeSyntax": "vapor-color-grape-900",
        "deltaE": 36.97,
        "hex": "#450059",
        "name": "color-grape-900",
        "oklch": "oklch(0.290 0.142 316.1)",
      },
      "color-gray-050": {
        "codeSyntax": "vapor-color-gray-050",
        "deltaE": 0,
        "hex": "#f7f7f7",
        "name": "color-gray-050",
        "oklch": "oklch(0.976 0.000 0.0)",
      },
      "color-gray-100": {
        "codeSyntax": "vapor-color-gray-100",
        "deltaE": 0,
        "hex": "#e1e1e1",
        "name": "color-gray-100",
        "oklch": "oklch(0.910 0.000 0.0)",
      },
      "color-gray-200": {
        "codeSyntax": "vapor-color-gray-200",
        "deltaE": 0,
        "hex": "#c6c6c6",
        "name": "color-gray-200",
        "oklch": "oklch(0.827 0.000 0.0)",
      },
      "color-gray-300": {
        "codeSyntax": "vapor-color-gray-300",
        "deltaE": 0,
        "hex": "#a3a3a3",
        "name": "color-gray-300",
        "oklch": "oklch(0.715 0.000 0.0)",
      },
      "color-gray-400": {
        "codeSyntax": "vapor-color-gray-400",
        "deltaE": 0,
        "hex": "#959595",
        "name": "color-gray-400",
        "oklch": "oklch(0.670 0.000 0.0)",
      },
      "color-gray-500": {
        "codeSyntax": "vapor-color-gray-500",
        "deltaE": 0,
        "hex": "#767676",
        "name": "color-gray-500",
        "oklch": "oklch(0.566 0.000 0.0)",
      },
      "color-gray-600": {
        "codeSyntax": "vapor-color-gray-600",
        "deltaE": 0,
        "hex": "#5d5d5d",
        "name": "color-gray-600",
        "oklch": "oklch(0.478 0.000 0.0)",
      },
      "color-gray-700": {
        "codeSyntax": "vapor-color-gray-700",
        "deltaE": 0,
        "hex": "#4c4c4c",
        "name": "color-gray-700",
        "oklch": "oklch(0.417 0.000 0.0)",
      },
      "color-gray-800": {
        "codeSyntax": "vapor-color-gray-800",
        "deltaE": 0,
        "hex": "#393939",
        "name": "color-gray-800",
        "oklch": "oklch(0.345 0.000 0.0)",
      },
      "color-gray-900": {
        "codeSyntax": "vapor-color-gray-900",
        "deltaE": 0,
        "hex": "#262626",
        "name": "color-gray-900",
        "oklch": "oklch(0.269 0.000 0.0)",
      },
      "color-green-050": {
        "codeSyntax": "vapor-color-green-050",
        "deltaE": 34.02,
        "hex": "#f0f8f5",
        "name": "color-green-050",
        "oklch": "oklch(0.972 0.009 171.8)",
      },
      "color-green-100": {
        "codeSyntax": "vapor-color-green-100",
        "deltaE": 27.07,
        "hex": "#cde8dd",
        "name": "color-green-100",
        "oklch": "oklch(0.908 0.032 169.2)",
      },
      "color-green-200": {
        "codeSyntax": "vapor-color-green-200",
        "deltaE": 18.4,
        "hex": "#9cd2bd",
        "name": "color-green-200",
        "oklch": "oklch(0.820 0.063 168.8)",
      },
      "color-green-300": {
        "codeSyntax": "vapor-color-green-300",
        "deltaE": 7.07,
        "hex": "#55b495",
        "name": "color-green-300",
        "oklch": "oklch(0.703 0.102 169.4)",
      },
      "color-green-400": {
        "codeSyntax": "vapor-color-green-400",
        "deltaE": 1.82,
        "hex": "#28a784",
        "name": "color-green-400",
        "oklch": "oklch(0.653 0.119 169.5)",
      },
      "color-green-500": {
        "codeSyntax": "vapor-color-green-500",
        "deltaE": 9.49,
        "hex": "#058765",
        "name": "color-green-500",
        "oklch": "oklch(0.554 0.112 167.3)",
      },
      "color-green-600": {
        "codeSyntax": "vapor-color-green-600",
        "deltaE": 20.34,
        "hex": "#046b4c",
        "name": "color-green-600",
        "oklch": "oklch(0.468 0.098 164.7)",
      },
      "color-green-700": {
        "codeSyntax": "vapor-color-green-700",
        "deltaE": 26.69,
        "hex": "#01583c",
        "name": "color-green-700",
        "oklch": "oklch(0.408 0.087 163.3)",
      },
      "color-green-800": {
        "codeSyntax": "vapor-color-green-800",
        "deltaE": 33.14,
        "hex": "#004229",
        "name": "color-green-800",
        "oklch": "oklch(0.335 0.075 160.4)",
      },
      "color-green-900": {
        "codeSyntax": "vapor-color-green-900",
        "deltaE": 39.04,
        "hex": "#002d16",
        "name": "color-green-900",
        "oklch": "oklch(0.261 0.064 155.3)",
      },
      "color-lime-050": {
        "codeSyntax": "vapor-color-lime-050",
        "deltaE": 27.01,
        "hex": "#f1fae8",
        "name": "color-lime-050",
        "oklch": "oklch(0.974 0.026 128.8)",
      },
      "color-lime-100": {
        "codeSyntax": "vapor-color-lime-100",
        "deltaE": 15,
        "hex": "#c9eca8",
        "name": "color-lime-100",
        "oklch": "oklch(0.901 0.097 130.3)",
      },
      "color-lime-200": {
        "codeSyntax": "vapor-color-lime-200",
        "deltaE": 2.79,
        "hex": "#9ad84a",
        "name": "color-lime-200",
        "oklch": "oklch(0.813 0.182 129.9)",
      },
      "color-lime-300": {
        "codeSyntax": "vapor-color-lime-300",
        "deltaE": 8.05,
        "hex": "#75b51f",
        "name": "color-lime-300",
        "oklch": "oklch(0.703 0.183 131.2)",
      },
      "color-lime-400": {
        "codeSyntax": "vapor-color-lime-400",
        "deltaE": 12.84,
        "hex": "#67a519",
        "name": "color-lime-400",
        "oklch": "oklch(0.655 0.173 131.9)",
      },
      "color-lime-500": {
        "codeSyntax": "vapor-color-lime-500",
        "deltaE": 23.73,
        "hex": "#4c850e",
        "name": "color-lime-500",
        "oklch": "oklch(0.556 0.153 133.5)",
      },
      "color-lime-600": {
        "codeSyntax": "vapor-color-lime-600",
        "deltaE": 34.69,
        "hex": "#366a03",
        "name": "color-lime-600",
        "oklch": "oklch(0.469 0.135 134.8)",
      },
      "color-lime-700": {
        "codeSyntax": "vapor-color-lime-700",
        "deltaE": 43.84,
        "hex": "#265700",
        "name": "color-lime-700",
        "oklch": "oklch(0.406 0.121 136.3)",
      },
      "color-lime-800": {
        "codeSyntax": "vapor-color-lime-800",
        "deltaE": 54.62,
        "hex": "#114300",
        "name": "color-lime-800",
        "oklch": "oklch(0.336 0.107 139.5)",
      },
      "color-lime-900": {
        "codeSyntax": "vapor-color-lime-900",
        "deltaE": 62.37,
        "hex": "#002e00",
        "name": "color-lime-900",
        "oklch": "oklch(0.261 0.089 142.5)",
      },
      "color-orange-050": {
        "codeSyntax": "vapor-color-orange-050",
        "deltaE": 37.55,
        "hex": "#fff6f1",
        "name": "color-orange-050",
        "oklch": "oklch(0.979 0.012 51.3)",
      },
      "color-orange-100": {
        "codeSyntax": "vapor-color-orange-100",
        "deltaE": 29.73,
        "hex": "#ffd9c8",
        "name": "color-orange-100",
        "oklch": "oklch(0.913 0.048 45.5)",
      },
      "color-orange-200": {
        "codeSyntax": "vapor-color-orange-200",
        "deltaE": 20.81,
        "hex": "#fcb797",
        "name": "color-orange-200",
        "oklch": "oklch(0.836 0.092 45.9)",
      },
      "color-orange-300": {
        "codeSyntax": "vapor-color-orange-300",
        "deltaE": 8.28,
        "hex": "#f4864f",
        "name": "color-orange-300",
        "oklch": "oklch(0.731 0.151 45.9)",
      },
      "color-orange-400": {
        "codeSyntax": "vapor-color-orange-400",
        "deltaE": 2.24,
        "hex": "#ef6f25",
        "name": "color-orange-400",
        "oklch": "oklch(0.685 0.177 45.9)",
      },
      "color-orange-500": {
        "codeSyntax": "vapor-color-orange-500",
        "deltaE": 9.87,
        "hex": "#cd4d0a",
        "name": "color-orange-500",
        "oklch": "oklch(0.586 0.175 41.4)",
      },
      "color-orange-600": {
        "codeSyntax": "vapor-color-orange-600",
        "deltaE": 20.83,
        "hex": "#ab3406",
        "name": "color-orange-600",
        "oklch": "oklch(0.499 0.162 37.3)",
      },
      "color-orange-700": {
        "codeSyntax": "vapor-color-orange-700",
        "deltaE": 27.52,
        "hex": "#932103",
        "name": "color-orange-700",
        "oklch": "oklch(0.436 0.154 34.1)",
      },
      "color-orange-800": {
        "codeSyntax": "vapor-color-orange-800",
        "deltaE": 34.35,
        "hex": "#780600",
        "name": "color-orange-800",
        "oklch": "oklch(0.363 0.145 30.2)",
      },
      "color-orange-900": {
        "codeSyntax": "vapor-color-orange-900",
        "deltaE": 40.86,
        "hex": "#570000",
        "name": "color-orange-900",
        "oklch": "oklch(0.287 0.118 29.2)",
      },
      "color-pink-050": {
        "codeSyntax": "vapor-color-pink-050",
        "deltaE": 34.15,
        "hex": "#fff5f7",
        "name": "color-pink-050",
        "oklch": "oklch(0.978 0.011 3.5)",
      },
      "color-pink-100": {
        "codeSyntax": "vapor-color-pink-100",
        "deltaE": 26.33,
        "hex": "#ffd8e2",
        "name": "color-pink-100",
        "oklch": "oklch(0.918 0.045 0.8)",
      },
      "color-pink-200": {
        "codeSyntax": "vapor-color-pink-200",
        "deltaE": 16.88,
        "hex": "#ffb1c6",
        "name": "color-pink-200",
        "oklch": "oklch(0.840 0.094 1.7)",
      },
      "color-pink-300": {
        "codeSyntax": "vapor-color-pink-300",
        "deltaE": 5.18,
        "hex": "#f77ca3",
        "name": "color-pink-300",
        "oklch": "oklch(0.737 0.155 1.5)",
      },
      "color-pink-400": {
        "codeSyntax": "vapor-color-pink-400",
        "deltaE": 0,
        "hex": "#f26394",
        "name": "color-pink-400",
        "oklch": "oklch(0.692 0.181 1.7)",
      },
      "color-pink-500": {
        "codeSyntax": "vapor-color-pink-500",
        "deltaE": 11.1,
        "hex": "#ca4676",
        "name": "color-pink-500",
        "oklch": "oklch(0.590 0.172 1.5)",
      },
      "color-pink-600": {
        "codeSyntax": "vapor-color-pink-600",
        "deltaE": 21.68,
        "hex": "#aa2d5d",
        "name": "color-pink-600",
        "oklch": "oklch(0.504 0.165 1.9)",
      },
      "color-pink-700": {
        "codeSyntax": "vapor-color-pink-700",
        "deltaE": 28.44,
        "hex": "#92194d",
        "name": "color-pink-700",
        "oklch": "oklch(0.440 0.159 1.1)",
      },
      "color-pink-800": {
        "codeSyntax": "vapor-color-pink-800",
        "deltaE": 34.56,
        "hex": "#760037",
        "name": "color-pink-800",
        "oklch": "oklch(0.365 0.147 2.9)",
      },
      "color-pink-900": {
        "codeSyntax": "vapor-color-pink-900",
        "deltaE": 40.6,
        "hex": "#54001e",
        "name": "color-pink-900",
        "oklch": "oklch(0.285 0.114 9.1)",
      },
      "color-red-050": {
        "codeSyntax": "vapor-color-red-050",
        "deltaE": 37.12,
        "hex": "#fff5f4",
        "name": "color-red-050",
        "oklch": "oklch(0.978 0.011 24.3)",
      },
      "color-red-100": {
        "codeSyntax": "vapor-color-red-100",
        "deltaE": 29.76,
        "hex": "#ffd8d7",
        "name": "color-red-100",
        "oklch": "oklch(0.915 0.044 19.7)",
      },
      "color-red-200": {
        "codeSyntax": "vapor-color-red-200",
        "deltaE": 20.75,
        "hex": "#ffb3b2",
        "name": "color-red-200",
        "oklch": "oklch(0.838 0.089 20.0)",
      },
      "color-red-300": {
        "codeSyntax": "vapor-color-red-300",
        "deltaE": 8.51,
        "hex": "#fc7d7f",
        "name": "color-red-300",
        "oklch": "oklch(0.736 0.155 20.6)",
      },
      "color-red-400": {
        "codeSyntax": "vapor-color-red-400",
        "deltaE": 3.12,
        "hex": "#f8636a",
        "name": "color-red-400",
        "oklch": "oklch(0.691 0.183 20.5)",
      },
      "color-red-500": {
        "codeSyntax": "vapor-color-red-500",
        "deltaE": 8.33,
        "hex": "#d54049",
        "name": "color-red-500",
        "oklch": "oklch(0.590 0.185 21.7)",
      },
      "color-red-600": {
        "codeSyntax": "vapor-color-red-600",
        "deltaE": 18.74,
        "hex": "#b12932",
        "name": "color-red-600",
        "oklch": "oklch(0.503 0.172 22.8)",
      },
      "color-red-700": {
        "codeSyntax": "vapor-color-red-700",
        "deltaE": 25.09,
        "hex": "#971622",
        "name": "color-red-700",
        "oklch": "oklch(0.437 0.162 23.4)",
      },
      "color-red-800": {
        "codeSyntax": "vapor-color-red-800",
        "deltaE": 31.5,
        "hex": "#79000c",
        "name": "color-red-800",
        "oklch": "oklch(0.363 0.147 25.9)",
      },
      "color-red-900": {
        "codeSyntax": "vapor-color-red-900",
        "deltaE": 37.32,
        "hex": "#560000",
        "name": "color-red-900",
        "oklch": "oklch(0.285 0.117 29.2)",
      },
      "color-violet-050": {
        "codeSyntax": "vapor-color-violet-050",
        "deltaE": 41.4,
        "hex": "#f6f5ff",
        "name": "color-violet-050",
        "oklch": "oklch(0.974 0.013 290.8)",
      },
      "color-violet-100": {
        "codeSyntax": "vapor-color-violet-100",
        "deltaE": 34.4,
        "hex": "#e1deff",
        "name": "color-violet-100",
        "oklch": "oklch(0.913 0.045 289.7)",
      },
      "color-violet-200": {
        "codeSyntax": "vapor-color-violet-200",
        "deltaE": 26.02,
        "hex": "#c8bffe",
        "name": "color-violet-200",
        "oklch": "oklch(0.834 0.088 290.9)",
      },
      "color-violet-300": {
        "codeSyntax": "vapor-color-violet-300",
        "deltaE": 14.88,
        "hex": "#a796fa",
        "name": "color-violet-300",
        "oklch": "oklch(0.729 0.143 290.2)",
      },
      "color-violet-400": {
        "codeSyntax": "vapor-color-violet-400",
        "deltaE": 9.55,
        "hex": "#9a83f8",
        "name": "color-violet-400",
        "oklch": "oklch(0.683 0.168 290.3)",
      },
      "color-violet-500": {
        "codeSyntax": "vapor-color-violet-500",
        "deltaE": 2.36,
        "hex": "#805ceb",
        "name": "color-violet-500",
        "oklch": "oklch(0.587 0.206 290.2)",
      },
      "color-violet-600": {
        "codeSyntax": "vapor-color-violet-600",
        "deltaE": 11.97,
        "hex": "#6843c8",
        "name": "color-violet-600",
        "oklch": "oklch(0.502 0.195 290.4)",
      },
      "color-violet-700": {
        "codeSyntax": "vapor-color-violet-700",
        "deltaE": 17.95,
        "hex": "#5731b0",
        "name": "color-violet-700",
        "oklch": "oklch(0.440 0.188 290.1)",
      },
      "color-violet-800": {
        "codeSyntax": "vapor-color-violet-800",
        "deltaE": 24.38,
        "hex": "#441a94",
        "name": "color-violet-800",
        "oklch": "oklch(0.367 0.180 290.0)",
      },
      "color-violet-900": {
        "codeSyntax": "vapor-color-violet-900",
        "deltaE": 30.27,
        "hex": "#300077",
        "name": "color-violet-900",
        "oklch": "oklch(0.292 0.167 288.5)",
      },
      "color-yellow-050": {
        "codeSyntax": "vapor-color-yellow-050",
        "deltaE": 26.4,
        "hex": "#fff7e7",
        "name": "color-yellow-050",
        "oklch": "oklch(0.978 0.023 84.6)",
      },
      "color-yellow-100": {
        "codeSyntax": "vapor-color-yellow-100",
        "deltaE": 12.83,
        "hex": "#ffdd95",
        "name": "color-yellow-100",
        "oklch": "oklch(0.910 0.098 85.3)",
      },
      "color-yellow-200": {
        "codeSyntax": "vapor-color-yellow-200",
        "deltaE": 1.01,
        "hex": "#fbbd06",
        "name": "color-yellow-200",
        "oklch": "oklch(0.832 0.170 84.5)",
      },
      "color-yellow-300": {
        "codeSyntax": "vapor-color-yellow-300",
        "deltaE": 11.09,
        "hex": "#d69902",
        "name": "color-yellow-300",
        "oklch": "oklch(0.723 0.149 80.0)",
      },
      "color-yellow-400": {
        "codeSyntax": "vapor-color-yellow-400",
        "deltaE": 15.9,
        "hex": "#c58a01",
        "name": "color-yellow-400",
        "oklch": "oklch(0.675 0.140 78.3)",
      },
      "color-yellow-500": {
        "codeSyntax": "vapor-color-yellow-500",
        "deltaE": 26.97,
        "hex": "#a26c01",
        "name": "color-yellow-500",
        "oklch": "oklch(0.574 0.121 74.5)",
      },
      "color-yellow-600": {
        "codeSyntax": "vapor-color-yellow-600",
        "deltaE": 37.98,
        "hex": "#855300",
        "name": "color-yellow-600",
        "oklch": "oklch(0.487 0.106 69.9)",
      },
      "color-yellow-700": {
        "codeSyntax": "vapor-color-yellow-700",
        "deltaE": 47.2,
        "hex": "#714100",
        "name": "color-yellow-700",
        "oklch": "oklch(0.424 0.095 64.7)",
      },
      "color-yellow-800": {
        "codeSyntax": "vapor-color-yellow-800",
        "deltaE": 59.17,
        "hex": "#5b2d00",
        "name": "color-yellow-800",
        "oklch": "oklch(0.352 0.085 57.0)",
      },
      "color-yellow-900": {
        "codeSyntax": "vapor-color-yellow-900",
        "deltaE": 70.05,
        "hex": "#461900",
        "name": "color-yellow-900",
        "oklch": "oklch(0.279 0.078 46.4)",
      },
    },
  },
}
`;
